add service API game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <div id="menu">
+      <button id='restart'>Restart</button>
+      <button id='mute'>Sound 🔉</button>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
