--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Puzzle Animal Game!</title>
   </head>
   <body>
-    <div id="menu">
+    <aside id="menu">
       <button id='restart'>Restart</button>
       <button id='mute'>Sound 🔉</button>
-    </div>
+    </aside>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
