add favicon and meto-tegs SEO

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			content="Play the Puzzle Animal Game! A fun and interactive game where you drag and drop animals to their correct spots."
 		/>
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://yourwebsite.com" />
+		<meta property="og:url" content="https://puzzle-animal-game.netlify.app/" />
 		<meta
 			property="og:image"
-			content="https://yourwebsite.com/images/og-image.jpg"
+			content="https://www.clipartmax.com/png/full/352-3528650_with-our-cloud-storage-solution-family-member-in-different-vector-graphics.png"
 		/>
 		<meta property="og:site_name" content="Puzzle Animal Game!" />
 		<meta name="twitter:card" content="summary_large_image" />
@@ -38,8 +38,9 @@
 		/>
 		<meta name="twitter:site" content="@dkmfzf" />
 		<meta name="twitter:creator" content="@dkmfzf" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <link rel="icon" href="./public/icon/favicon.ico" sizes="any" />
+		<link rel="icon" type="image/svg+xml" href="./public/icon/favicon.svg" />
+		<link rel="apple-touch-icon" href="./public/icon/apple-touch-icon.png" />
 		<link rel="canonical" href="https://puzzle-animal-game.netlify.app/" />
 		<link rel="stylesheet" href="/src/styles.css" />
 		<link rel="stylesheet" href="./src/vendor/normalize.css" />
